--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,8 +6,9 @@
   <thead>
     <tr>
 	  <th>ID</th>
-      <th>Name</th>
-      <th>Marks</th>
+      <th>Title</th>
+      <th>Author</th>
+	  <th>Price</th>
       <th colspan="3"></th>
     </tr>
   </thead>
